# alexandria

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/brain/: Cargo.toml
crates/brain/src/: jsonl.rs  lib.rs  main.rs  skill.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: archive.rs  catalog.rs  consolidate.rs  coverage.rs  expand.rs  forget.rs  init.rs  link.rs  map.rs  meta.rs  mod.rs  recall.rs  reflect.rs  reindex.rs  remember.rs  style.rs  survey.rs  threads.rs  timeline.rs  trace.rs  util.rs
crates/core/: Cargo.toml
crates/core/examples/: distances.rs
crates/core/src/: catalog.rs  config.rs  consolidate.rs  coverage.rs  engram.rs  error.rs  facets.rs  freshness.rs  graph.rs  index.rs  lib.rs  map.rs  meta.rs  ops.rs  provider.rs  retrieval.rs  shape.rs  stopwords_en.txt  store.rs  style.rs  survey.rs  threads.rs
crates/core/src/provider/: anthropic.rs  http.rs  mod.rs  ollama.rs  openai.rs
crates/core/tests/: integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: handlers.rs  lib.rs  main.rs  params.rs  server.rs
crates/mcp/tests/: handlers.rs
docs/: ARCHITECTURE.md  OVERVIEW.md  REMOTE.md  SECOND_BRAIN.md
proxy/: Dockerfile  README.md  package-lock.json  package.json
proxy/scripts/: oauth-smoke-test.mjs
proxy/src/: auth.js  config.js  logger.js  oauth.js  server.js  store.js
