[package]
name = "alexandria"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alexandria CLI — local-first LLM memory"

[[bin]]
name = "alexandria"
path = "src/main.rs"

[dependencies]
alexandria-core = { path = "../core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
