[package]
name = "alexandria-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alexandria core library — store, index, retrieval"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
fastembed = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
