[package]
name = "alexandria-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alexandria MCP server — memory verbs as tools for Codex"

[[bin]]
name = "alexandria-mcp"
path = "src/main.rs"

[lib]
name = "alexandria_mcp"
path = "src/lib.rs"

[dependencies]
alexandria-core = { path = "../core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
