[package]
name = "alexandria-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alexandria MCP server — memory verbs as tools for Codex"

[[bin]]
name = "alexandria-mcp"
path = "src/main.rs"

[lib]
name = "alexandria_mcp"
path = "src/lib.rs"

[dependencies]
alexandria-core = { path = "../core" }
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
